(feat): implementing role based authorization and custom access denied handler